--- a/index.html
+++ b/index.html
@@ -76,22 +76,16 @@
             position: relative;
         }
 
-        .default {
-            color: #fff;
-            opacity: 0;
-            animation: move_bottom .5s cubic-bezier(0, 0.55, 0.58, 1) forwards;
-        }
-
-        @keyframes move_bottom {
-            0% {
-                opacity: 0;
-                margin-top: 30px;
-            }
-
-            100% {
-                opacity: 1;
-                margin-bottom: 0;
-            }
+        .component:before {
+            content: "";
+            width: 100%;
+            height: 50px;
+            pointer-events: none;
+            background: linear-gradient(to bottom, #000 0, rgba(0, 0, 0, 0) 100%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 2;
         }
 
         .old {
@@ -112,17 +106,18 @@
             animation: move_bottom .5s cubic-bezier(0, 0.55, 0.58, 1) forwards;
         }
 
-        .component:before {
-            content: "";
-            width: 100%;
-            height: 50px;
-            pointer-events: none;
-            background: linear-gradient(to bottom, #000 0, rgba(0, 0, 0, 0) 100%);
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 2;
+        @keyframes move_bottom {
+            0% {
+                opacity: 0;
+                margin-top: 30px;
+            }
+
+            100% {
+                opacity: 1;
+                margin-bottom: 0;
+            }
         }
+
 
         .answer {
             color: #fff;
@@ -144,8 +139,6 @@
             }
         }
 
-
-
         .text {
             margin: 15px 25px;
             font-size: 1rem;
@@ -156,11 +149,34 @@
             padding: 8px 15px;
             line-height: 1.5rem;
             transition: all .4s ease;
+            position: relative;
+        }
+
+        .text_left::before, 
+        .text_right::before {
+            content: '';
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: transparent;
+            border: 5px solid #f7931e;
+            position: absolute;
+            background: #000;
+        }
+
+        .text_left::before {
+            left: -15px;
+            bottom: -15px;
+        }
+
+        .text_right::before {
+            right: -15px;
+            top: -15px;
         }
 
         .btn {
             display: inline-block;
-            animation: move_bottom .5s cubic-bezier(0, 0.55, 0.58, 1) 1s forwards;
+            animation: move_bottom .5s cubic-bezier(0, 0.55, 0.58, 1) 0.5s forwards;
             opacity: 0;
         }
 
@@ -203,7 +219,8 @@
 
         .tips {
             display: flex;
-            flex-flow: row;
+            /* flex-flow: row; */
+            flex-wrap: wrap;
             /* height: 30px; */
             /* display: none; */
             margin: 10px 20px 10px;
@@ -232,6 +249,14 @@
             padding: 0;
             color: #fff;
             font-size: 1rem;
+            font-weight: bold;
+            transition: all .3s ease;
+        }
+
+        .input_err {
+            pointer-events: none;
+            background: #000;
+            color: coral;
         }
 
         .input_btn {
@@ -242,11 +267,15 @@
             height: 40px;
             /* margin: 20px 20px 0 0; */
             outline: none;
+            transition: all .3s ease;
+        }
+
+        .input_btn:active {
+            background: #fff;
         }
 
         .input_btn img {
             width: 40%;
-
         }
 
         .circle {
@@ -275,7 +304,8 @@
                     <!-- opacity: i == env.answer.length - 1 ? 1 : 0.5,  -->
                     <div :id="i"
                         :style="{'border-radius': pro.dir != null ? '15px 0px 15px 15px' : '15px 15px 15px 0px'}"
-                        class="text" v-html="pro.msg"> </div>
+                        class="text" :class="{text_right: pro.dir != null , text_left: pro.dir == null }"
+                        v-html="pro.msg"> </div>
                     <!-- <div class="circle">圆</div> -->
                 </div>
             </div>
@@ -283,12 +313,17 @@
         <div class="actions">
             <div class="tips">
                 <div class="btn" v-for="an in env.selected.actions" v-if="an.type == 'button'">
-                    <button class="line" :class="{select: env.filters != null && an.title == env.filters.name ? 1 : 0}"
+                    <button class="line" :class="{select: env.filter_select != null && an.title == env.filter_select.name ? 1 : 0}"
                         @click="select(an.target)">{{an.title}}</button>
+                </div>
+                <div class="btn" v-for="filter in env.filters">
+                    <button class="line" :class="{select: env.filter_select != null && filter.name == env.filter_select.name  ? 1 : 0}"
+                        @click="select(filter.key)">{{filter.name}}</button>
                 </div>
             </div>
             <div class="inputbox">
-                <input class="input" @input="filter_index" ref="input" placeholder="Type to filter..." type="text">
+                <input class="input" :class="{input_err: env.input_error}" @input="filter_index" ref="input"
+                    placeholder="Type to filter..." type="text">
                 <button @click="input_commit" class="input_btn"><img src="./assets/image/箭头.png" alt=""></button>
                 <div class="error">{{env.err}}</div>
             </div>
