--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./src/vue.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -76,16 +75,19 @@
             position: relative;
         }
 
-        .component:before {
-            content: "";
+        .shade {
             width: 100%;
             height: 50px;
             pointer-events: none;
-            background: linear-gradient(to bottom, #000 0, rgba(0, 0, 0, 0) 100%);
+            background: transparent;
             position: absolute;
             top: 0;
             left: 0;
             z-index: 2;
+        }
+
+        .shade_scroll {
+            background: linear-gradient(to bottom, #000 0, rgba(0, 0, 0, 0) 100%);
         }
 
         .old {
@@ -94,9 +96,9 @@
             bottom: 0;
             width: 100%;
             height: 100%;
-            overflow: scroll;
+            overflow-y: scroll;
         }
-
+        
         .old::-webkit-scrollbar {
             display: none;
         }
@@ -152,7 +154,7 @@
             position: relative;
         }
 
-        .text_left::before, 
+        .text_left::before,
         .text_right::before {
             content: '';
             width: 20px;
@@ -176,7 +178,7 @@
 
         .btn {
             display: inline-block;
-            animation: move_bottom .5s cubic-bezier(0, 0.55, 0.58, 1) 0.5s forwards;
+            animation: move_bottom .5s cubic-bezier(0, 0.55, 0.58, 1) forwards;
             opacity: 0;
         }
 
@@ -197,6 +199,7 @@
             font-size: 1rem;
             outline: none;
             transition: all .4s ease;
+            cursor: pointer;
         }
 
         .line:active {
@@ -245,8 +248,8 @@
             border: 0;
             outline: none;
             /* padding-left: 20px; */
-            text-align: center;
             padding: 0;
+            padding-left: 10px;
             color: #fff;
             font-size: 1rem;
             font-weight: bold;
@@ -268,6 +271,7 @@
             /* margin: 20px 20px 0 0; */
             outline: none;
             transition: all .3s ease;
+            cursor: pointer;
         }
 
         .input_btn:active {
@@ -298,26 +302,27 @@
     </div>
     <div id="app">
         <div class="component" v-if="env.answer">
+            <div class="shade" :class="{shade_scroll: env.shade}"></div>
             <div class="old" ref="oldlist">
                 <div class="answer" v-for="pro, i in env.answer"
                     :style="{'animation-delay': (i + 1) * 0.4 + 0.9 + 's', 'text-align': pro.dir != null ? 'right' : 'left'}">
-                    <!-- opacity: i == env.answer.length - 1 ? 1 : 0.5,  -->
                     <div :id="i"
                         :style="{'border-radius': pro.dir != null ? '15px 0px 15px 15px' : '15px 15px 15px 0px'}"
                         class="text" :class="{text_right: pro.dir != null , text_left: pro.dir == null }"
                         v-html="pro.msg"> </div>
-                    <!-- <div class="circle">圆</div> -->
                 </div>
             </div>
         </div>
         <div class="actions">
             <div class="tips">
                 <div class="btn" v-for="an in env.selected.actions" v-if="an.type == 'button'">
-                    <button class="line" :class="{select: env.filter_select != null && an.title == env.filter_select.name ? 1 : 0}"
+                    <button class="line"
+                        :class="{select: env.filter_select != null && an.title == env.filter_select.name ? 1 : 0}"
                         @click="select(an.target)">{{an.title}}</button>
                 </div>
                 <div class="btn" v-for="filter in env.filters">
-                    <button class="line" :class="{select: env.filter_select != null && filter.name == env.filter_select.name  ? 1 : 0}"
+                    <button class="line"
+                        :class="{select: env.filter_select != null && filter.name == env.filter_select.name  ? 1 : 0}"
                         @click="select(filter.key)">{{filter.name}}</button>
                 </div>
             </div>
