add pinyin and name search

--- a/ref.html
+++ b/ref.html
@@ -128,6 +128,56 @@
         </div>
 
     </div>
+
+    <script>
+
+        // route.match('/my/fancy/route/page/7') // { page: 7 }
+        // route.reverse({page: 3}) // -> '/my/fancy/route/page/3'
+        // console.log( route.reverse({page: 3}) );
+
+
+        // var routes = [];
+        // for(var i in ctx) {
+        //     routes.push({
+        //         r: new Route(i),
+        //         ctx: ctx[i]
+        //     });
+        // }
+
+        // function runCTX(ctx, match) {
+        //     for(var i in ctx.prompts) {
+        //         var str = ctx.prompts[0].msg;
+        //         str = magic(str);
+        //     }
+        //     return ctx.passThrough;
+        // }
+
+        // function run(path) {
+        //     for(var i = 0; i < routes.length; i++) {
+        //         if(routes[i].r.match(path)) {
+        //             if(!runCTX(routes[i].ctx, routes[i].r.match(path))) {
+        //                 break;
+        //             }
+        //         }
+        //     }
+        // }
+
+        // import template from "es6-template-strings";
+        // var methods = {
+        //     getProduct: function (key) {
+        //         return data.products[key]
+        //     }
+        // };
+
+        // var str = template("您正在查看金融产品${getProduct(any, 'finance')}",{
+        //     ...methods,
+        //     ...match,
+        //     ...local
+        // });
+
+        // console.log(str)
+
+    </script>
 </body>
 
 </html>
