--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     </div>
     <div id="app">
         <div class="head">
-            <div class="targetbox" :style="{opacity: env.select.name != '起点' ? 1 : 0}">您已抵达 <span class="target">{{env.select.name}}</span>
+            <div class="targetbox" :style="{opacity: env.select.name != '起点' && env.select.hasOwnProperty('name') ? 1 : 0}">您已抵达 <span class="target">{{env.select.name}}</span>
             </div>
             <img @click="cutType" src="./assets/image/menu.png" alt="">
         </div>
@@ -409,7 +409,7 @@
                         {{an.title}}
                     </button>
                 </div>
-                <div class="btn" v-for="filter in env.filters">
+                <div class="btn" v-for="filter in env.filters" v-if="filter.name != null" :style="{opacity: filter.select ? 1 : 0}">
                     <button class="line"
                         :class="{select: env.filter_select != null && filter.name == env.filter_select.name  ? 1 : 0}"
                         @click="select(filter.key)">
