--- a/index.html
+++ b/index.html
@@ -431,40 +431,37 @@
 
         /* img */
         .ac_img_box {
-            width: 80px;
-            height: 100px;
+            width: 70px;
+            height: 90px;
             background-color: #f6921e;
             border-radius: 10px;
-            color: #000;
+            color: #333;
             margin: 5px;
             transition: all .4s cubic-bezier(0.08, 0.54, 0.52, 0.65);
             cursor: pointer;
             display: flex;
-            justify-content: center;
-            align-items: flex-end;
+            /* justify-content: center; */
+            /* align-items: flex-end; */
+            flex-flow: column;
             background-size: 100% 100%;
             background-size: cover;
-            color: #fff;
+            color: #e6e6e6;
             position: relative;
-            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+            -webkit-tap-highlight-color: rgba(230, 230, 230, 0);
+            text-align: center;
         }
 
         .ac_img {
-            position: absolute;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            top: 0;
             margin: auto;
-            max-width: 70px;
+            max-height: 50px;
             transition: all .4s ease;
         }
 
         .ac_text {
-            background: rgba(0, 0, 0, 0.6);
-            /* border: 1px solid rgba(0, 0, 0, 0.6); */
+            background: rgba(51, 51, 51, 0.6);
+            /* border: 1px solid rgba(51, 51, 51, 0.6); */
             display: block;
-            width: 100%;
+            /* width: 100%; */
             text-align: center;
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
@@ -475,7 +472,7 @@
         }
 
         .ac_img_box:active .ac_text {
-            background: rgba(0, 0, 0, 1);
+            background: rgba(51, 51, 51, 1);
         }
     </style>
 
