--- a/index.html
+++ b/index.html
@@ -431,41 +431,31 @@
 
         /* img */
         .ac_img_box {
-            width: 70px;
-            height: 90px;
-            background-color: #f6921e;
+            width: 80px;
             border-radius: 10px;
             color: #333;
             margin: 5px;
             transition: all .4s cubic-bezier(0.08, 0.54, 0.52, 0.65);
             cursor: pointer;
             display: flex;
-            /* justify-content: center; */
-            /* align-items: flex-end; */
             flex-flow: column;
-            background-size: 100% 100%;
-            background-size: cover;
             color: #e6e6e6;
             position: relative;
             -webkit-tap-highlight-color: rgba(230, 230, 230, 0);
             text-align: center;
+            overflow: hidden;
         }
 
         .ac_img {
-            margin: auto;
-            max-height: 50px;
             transition: all .4s ease;
+            width: 100%;
+            height: auto;
         }
 
         .ac_text {
-            background: rgba(51, 51, 51, 0.6);
-            /* border: 1px solid rgba(51, 51, 51, 0.6); */
+            background: rgba(247, 147, 30, .6);
             display: block;
-            /* width: 100%; */
             text-align: center;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            /* margin: 5px; */
             padding: 5px;
             position: relative;
             transition: all .4s cubic-bezier(0.08, 0.54, 0.52, 0.65);
