--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
             transition: all .4s cubic-bezier(0.08, 0.54, 0.52, 0.65);
             cursor: pointer;
             display: flex;
+            flex-flow: column;
             color: #e6e6e6;
             position: relative;
             -webkit-tap-highlight-color: rgba(230, 230, 230, 0);
